Fixed live dot visibility

--- a/src/main/resources/net/marvk/fs/vatsim/map/view/datadetail/clientdetail/clientdetail.css
+++ b/src/main/resources/net/marvk/fs/vatsim/map/view/datadetail/clientdetail/clientdetail.css
@@ -18,9 +18,10 @@
 }
 
 .header-pane .live-dot {
-    -fx-text-fill: transparent;
+    visibility: hidden;
 }
 
 .twitch-container .live-dot {
     -fx-text-fill: red;
+    visibility: visible;
 }
